# cfddiscovery

./: CMakeLists.txt  main.cpp  readme.md
algorithms/: baseminer.cpp  baseminer.h  cfddiscovery.cpp  cfddiscovery.h  cfdindex.cpp  cfdindex.h  ctane.cpp  ctane.h  generatorstore.h  minernode.cpp  minernode.h  partitiontable.cpp  partitiontable.h
data/: cfd.cpp  cfd.h  database.cpp  database.h  databasereader.cpp  databasereader.h  types.cpp  types.h
datasets/: contraceptive.csv
util/: output.h  prefixtree.h  setutil.cpp  setutil.h  stringutil.cpp  stringutil.h
